<resources>
    <string name="app_name">Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="menu_star_wars">Star Wars\nAPI Project</string>
    <string name="menu_film">Films</string>
    <string name="menu_people">People</string>
    <string name="menu_planet">Planets</string>
    <string name="menu_starship">Starships</string>
    <string name="menu_species">Species</string>
    <string name="menu_vehicle">Vehicles</string>

    <string name="return_menu">Menu</string>
    <string name="previous_page">Previous page</string>
    <string name="next_page">Next page</string>
    <string name="error_generic">An error occurred...\nPlease check your Internet connection</string>
    <string name="return_generic">Return</string>

    <string name="title_generic">Title:</string>
    <string name="producer_generic">Producer:</string>
    <string name="episodeId_generic">Episode:</string>
    <string name="release_generic">Release date:</string>

    <string name="name_generic">Name:</string>
    <string name="height_generic">Height:</string>
    <string name="mass_generic">Mass:</string>
    <string name="hairColor_generic">Hair color:</string>
    <string name="skinColor_generic">Skin color:</string>
    <string name="eyeColor_generic">Eye color:</string>
    <string name="birthYear_generic">Birth year:</string>
    <string name="gender_generic">Gender:</string>

    <string name="diameter_generic">Diameter:</string>
    <string name="rotationPeriod_generic">Rotation period:</string>
    <string name="orbitalPeriod_generic">Orbital period:</string>
    <string name="gravity_generic">Gravity:</string>
    <string name="population_generic">Population:</string>
    <string name="climate_generic">Climate:</string>
    <string name="terrain_generic">Terrain:</string>

    <string name="classification_generic">Classification:</string>
    <string name="designation_generic">Designation:</string>
    <string name="averageHeight_generic">Average height:</string>
    <string name="averageLifespan_generic">Average lifespan:</string>
    <string name="language_generic">Language:</string>

    <string name="model_generic">Model:</string>
    <string name="starship_class_generic">Starship class:</string>
    <string name="manufacturer_generic">Manufacturer:</string>
    <string name="cost_generic">Cost in credits:</string>
    <string name="length_generic">Length:</string>
    <string name="crew_generic">Crew:</string>
    <string name="passengers_generic">Passengers:</string>

    <string name="vehicle_class_generic">Vehicle class:</string>
</resources>