<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stalinist_one"
        android:text="@string/menu_star_wars"
        android:textAlignment="center"
        android:textColor="@color/yellow_star_wars"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button_film"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_film"
        app:layout_constraintBottom_toTopOf="@+id/button_planet"
        app:layout_constraintEnd_toStartOf="@+id/button_people"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/button_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_people"
        app:layout_constraintBottom_toTopOf="@+id/button_planet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_film"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/button_planet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_planet"
        app:layout_constraintBottom_toTopOf="@+id/button_starship"
        app:layout_constraintEnd_toStartOf="@+id/button_species"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_film" />

    <Button
        android:id="@+id/button_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_species"
        app:layout_constraintBottom_toTopOf="@+id/button_starship"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_planet"
        app:layout_constraintTop_toBottomOf="@+id/button_film" />

    <Button
        android:id="@+id/button_starship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_starship"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_vehicle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_planet" />

    <Button
        android:id="@+id/button_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_vehicle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_starship"
        app:layout_constraintTop_toBottomOf="@+id/button_planet" />
</androidx.constraintlayout.widget.ConstraintLayout>