<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.list.PlanetListFragment">

    <Button
        android:id="@+id/button_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_menu"
        app:layout_constraintBottom_toTopOf="@+id/button_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_page"
        app:layout_constraintTop_toBottomOf="@+id/button_menu"
        app:layout_constraintBottom_toTopOf="@+id/planet_recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_previous" />

    <Button
        android:id="@+id/button_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_page"
        app:layout_constraintTop_toBottomOf="@+id/button_menu"
        app:layout_constraintBottom_toTopOf="@+id/planet_recyclerview"
        app:layout_constraintEnd_toStartOf="@+id/button_next"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/planet_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_previous" />

    <ProgressBar
        android:id="@+id/planet_list_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_previous"
        />

    <TextView
        android:id="@+id/planet_list_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/error_generic"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_previous"
        />
</androidx.constraintlayout.widget.ConstraintLayout>