<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.PlanetDetailFragment">

    <Button
        android:id="@+id/button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_generic"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/planet_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_generic"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_return"
        app:layout_constraintEnd_toStartOf="@+id/planet_detail_name_value"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_diameter"
        />

    <TextView
        android:id="@+id/planet_detail_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/planet_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/button_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_diameter"
        />

    <TextView
        android:id="@+id/planet_detail_diameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diameter_generic"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_name"
        app:layout_constraintEnd_toStartOf="@+id/planet_detail_diameter_value"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_rotationPeriod"
        />

    <TextView
        android:id="@+id/planet_detail_diameter_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/planet_detail_diameter"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_rotationPeriod"
        />

    <TextView
        android:id="@+id/planet_detail_rotationPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotationPeriod_generic"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_diameter"
        app:layout_constraintEnd_toStartOf="@+id/planet_detail_rotationPeriod_value"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_orbitalPeriod"
        />

    <TextView
        android:id="@+id/planet_detail_rotationPeriod_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/planet_detail_rotationPeriod"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_diameter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_orbitalPeriod"
        />

    <TextView
        android:id="@+id/planet_detail_orbitalPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orbitalPeriod_generic"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_rotationPeriod"
        app:layout_constraintEnd_toStartOf="@+id/planet_detail_orbitalPeriod_value"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_gravity"
        />

    <TextView
        android:id="@+id/planet_detail_orbitalPeriod_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/planet_detail_orbitalPeriod"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_rotationPeriod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_gravity"
        />

    <TextView
        android:id="@+id/planet_detail_gravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gravity_generic"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_orbitalPeriod"
        app:layout_constraintEnd_toStartOf="@+id/planet_detail_gravity_value"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_population"
        />

    <TextView
        android:id="@+id/planet_detail_gravity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/planet_detail_gravity"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_orbitalPeriod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_population"
        />

    <TextView
        android:id="@+id/planet_detail_population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/population_generic"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_gravity"
        app:layout_constraintEnd_toStartOf="@+id/planet_detail_population_Value"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_climate"
        />

    <TextView
        android:id="@+id/planet_detail_population_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/planet_detail_population"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_climate"
        />

    <TextView
        android:id="@+id/planet_detail_climate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/climate_generic"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_population"
        app:layout_constraintEnd_toStartOf="@+id/planet_detail_climate_value"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_terrain"
        />

    <TextView
        android:id="@+id/planet_detail_climate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/planet_detail_climate"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_population"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/planet_detail_terrain"
        />

    <TextView
        android:id="@+id/planet_detail_terrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terrain_generic"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_climate"
        app:layout_constraintEnd_toStartOf="@+id/planet_detail_terrain_value"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/planet_detail_terrain_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow_star_wars"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/planet_detail_terrain"
        app:layout_constraintTop_toBottomOf="@+id/planet_detail_climate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ProgressBar
        android:id="@+id/planet_detail_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_return" />

    <TextView
        android:id="@+id/planet_detail_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/error_generic"
        android:textAlignment="center"
        android:textColor="@color/yellow_star_wars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_return"
        />

</androidx.constraintlayout.widget.ConstraintLayout>